# rg-backend

./: .dockerignore  .env.example  .gitignore  BACKEND_ONLY_ONE_PROJECT_BOOTSTRAP.sql  CLAUDE_CODE_MASTER_BACKEND_HANDOFF.md  Dockerfile  Makefile  N8N_TO_PYTHON_MIGRATION.md  README.md  STARTER_SYSTEM_CONFIG_TEMPLATE.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml  test_services.py
.playwright-cli/: page-2026-04-13T20-09-15-387Z.yml  page-2026-04-13T20-15-38-146Z.yml  page-2026-04-13T20-15-47-408Z.yml  page-2026-04-14T01-56-58-514Z.yml  page-2026-04-14T01-57-04-678Z.yml  page-2026-04-14T21-11-11-249Z.yml  page-2026-04-14T21-12-12-632Z.yml  page-2026-04-14T21-12-39-650Z.yml  page-2026-04-14T21-12-42-896Z.yml
.playwright-mcp/: ghl-state-raw.json  ghl-state.json
app/: auth.py  config.py  main.py  models.py  test_dual_mode.py  test_p1_only.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_wide.py  test_qual_gate.py  test_qual_gate_stress.py
app/api/: ghl_proxy.py  token_map.py
app/clients/: base.py  registry.py
app/marketplace/: __init__.py  ghl_assets.py  internal_api.py  oauth.py  oauth_store.py  setup_api.py  token_refresh.py
app/routers/: data_chat.py
app/services/: __init__.py  (+20 more)
docs/: mermaid-miro-sync-manifest.yaml  miro-rest-sync.md
migrations/: 001_marketplace_ghl_installs.sql
scripts/: bootstrap_entity.sql  doctor.py  miro_oauth.py  register_marketplace_app.py  render_bootstrap_sql.py  render_seed_sql.py  render_tight_png.py  sync_mermaid_to_miro.py  sync_native_conversation_agent_to_miro.py  tunnel_shared_db.sh
(+86 files in other folders)
