[project]
name = "iron-setter"
version = "0.1.0"
description = "iron-setter — AI SMS reply agent for Iron Automations (FastAPI + Prefect)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",

    # Async HTTP client
    "httpx>=0.28.0",

    # Async Postgres (direct connection pool for chat history)
    "asyncpg>=0.30.0",

    # AI SDKs
    "openai>=1.60.0",          # OpenRouter-compatible (primary)
    "google-genai>=1.0.0",     # Direct Google Gemini (fallback)

    # Supabase Python SDK
    "supabase>=2.11.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Orchestration / execution tracking
    "prefect>=3.1.0",

    # Environment variables
    "python-dotenv>=1.0.0",

    # Manifest updates for Mermaid -> Miro sync
    "PyYAML>=6.0.2",

    # Tokenizer (for LLM cost estimation)
    "tiktoken>=0.8.0",

    # Direct provider SDKs (fallback when OpenRouter is down)
    "anthropic>=0.40.0",

    # Portal JWT authentication
    "PyJWT>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
